<resources>
    <string name="app_name">FireApp</string>
    <string name="lbl_add">Adicionar no firebase</string>
    <string name="lbl_value">Value</string>
    <string name="lbl_key">Key</string>
    <string name="lbl_listview">List View</string>
    <string name="lbl_image_upload">Image Upload</string>
    <string name="lbl_image_upload_show">Capture and Upload</string>
    <string name="lbl_audeo_recorder">Audeo Recorder</string>
    <string name="lbl_google_sign_in">Google Sign</string>
    <string name="lbl_firebase_offline_capables">Firebase Offline Capables</string>
    <string name="lbl_login">SIGN UP</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_loged">User Loged In</string>
    <string name="lbl_logout">LogOut</string>
    <string name="lbl_info_record">Precione o botao sem largar para gravar</string>
</resources>
