<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context="io.github.joseseie.fireapp.MainActivity">

    <EditText
        android:id="@+id/keyValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_key" />

    <EditText
        android:id="@+id/valueField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_value" />

    <Button
        android:id="@+id/btnSendData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_add" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mValueView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="127dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="30sp" />
    </RelativeLayout>

</LinearLayout>
