<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context="io.github.joseseie.fireapp.MainActivity">

    <EditText
        android:id="@+id/keyValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_key" />

    <EditText
        android:id="@+id/valueField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_value" />

    <Button
        android:id="@+id/btnSendData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_add" />

</LinearLayout>
